--- a/HeteroData Graph.ipynb
+++ b/HeteroData Graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -16,19 +16,14 @@
     }
    ],
    "source": [
-    "import os\n",
-    "from typing import Optional\n",
-    "import timeit\n",
-    "import itertools\n",
-    "\n",
+    "import time\n",
     "import scipy\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import winsound\n",
     "\n",
     "import networkx as nx\n",
     "import matplotlib\n",
-    "\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
     "import torch\n",
     "from torch_geometric.data import HeteroData\n",
@@ -39,6 +34,15 @@
     "print(matplotlib.__version__)\n",
     "print(nx.__version__)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 3 Songs Example"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -97,6 +101,26 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['6', '11', '9']"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node_categories['tempo']"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "                                     source        target\n0      -Albert_King_-_Born_Under_A_Bad_Sign      g1601074\n1      -Albert_King_-_Born_Under_A_Bad_Sign      g1577049\n2      -Albert_King_-_Born_Under_A_Bad_Sign      g1575127\n3      -Albert_King_-_Born_Under_A_Bad_Sign  g-1872221027\n4      -Albert_King_-_Born_Under_A_Bad_Sign    g795292196\n...                                     ...           ...\n18857              -B_B_King_-_Rock_Me_Baby      g1750992\n18858              -B_B_King_-_Rock_Me_Baby    g415858330\n18859              -B_B_King_-_Rock_Me_Baby      g1606844\n18860              -B_B_King_-_Rock_Me_Baby      g1605881\n18866              -B_B_King_-_Rock_Me_Baby      g1603959\n\n[2681 rows x 2 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>source</th>\n      <th>target</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g1601074</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g1577049</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g1575127</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g-1872221027</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g795292196</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>18857</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g1750992</td>\n    </tr>\n    <tr>\n      <th>18858</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g415858330</td>\n    </tr>\n    <tr>\n      <th>18859</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g1606844</td>\n    </tr>\n    <tr>\n      <th>18860</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g1605881</td>\n    </tr>\n    <tr>\n      <th>18866</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g1603959</td>\n    </tr>\n  </tbody>\n</table>\n<p>2681 rows × 2 columns</p>\n</div>"
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,30 +165,10 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Index(['source', 'target', 'edge_type'], dtype='object')"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "edges_f.columns"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Graph Build"
+    "## Graph Build"
    ]
   },
   {
@@ -209,7 +213,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "{'x': ['-Albert_King_-_Born_Under_A_Bad_Sign', '-B_B_King_-_How_Blue_Can_You_Get', '-B_B_King_-_Rock_Me_Baby']}"
+      "text/plain": "{'x': ['-Albert_King_-_Born_Under_A_Bad_Sign', '-B_B_King_-_Rock_Me_Baby', '-B_B_King_-_How_Blue_Can_You_Get']}"
      },
      "execution_count": 11,
      "metadata": {},
@@ -302,7 +306,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[2638, 2706],\n       [   0, 2703],\n       [   1, 2703],\n       ...,\n       [2622, 2704],\n       [2623, 2704],\n       [2624, 2704]])"
+      "text/plain": "array([[2638, 2706],\n       [   0, 2703],\n       [   1, 2703],\n       ...,\n       [2563, 2704],\n       [2623, 2704],\n       [2596, 2704]])"
      },
      "execution_count": 17,
      "metadata": {},
@@ -324,7 +328,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[2638,    0, 2714],\n       [2638,    1, 2714],\n       [2638,    2, 2714],\n       ...,\n       [2552, 2610, 2717],\n       [2553, 2600, 2717],\n       [2553, 2672, 2716]])"
+      "text/plain": "array([[2638,    0, 2714],\n       [2638,    1, 2714],\n       [2638,    2, 2714],\n       ...,\n       [2552, 2585, 2717],\n       [2553, 2611, 2717],\n       [2553, 2643, 2716]])"
      },
      "execution_count": 18,
      "metadata": {},
@@ -345,7 +349,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([[2638,    0],\n        [2638,    1],\n        [2638,    2],\n        ...,\n        [2552, 2610],\n        [2553, 2600],\n        [2553, 2672]], dtype=torch.int32)"
+      "text/plain": "tensor([[2638,    0],\n        [2638,    1],\n        [2638,    2],\n        ...,\n        [2552, 2585],\n        [2553, 2611],\n        [2553, 2643]], dtype=torch.int32)"
      },
      "execution_count": 19,
      "metadata": {},
@@ -387,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
@@ -426,6 +430,129 @@
    ],
    "source": [
     "print(hetero_graph)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Complete Dataset"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading edgelists...\n",
+      "- notes.edgelist\n",
+      "- program.edgelist\n",
+      "- tempo.edgelist\n",
+      "- time.signature.edgelist\n",
+      "Nodes: 84093\n",
+      "Edges: 702340\n"
+     ]
+    }
+   ],
+   "source": [
+    "C = complete_graph(\".\\slac\\embeddings\\edgelist0\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [],
+   "source": [
+    "nodes_c = pd.DataFrame((list(C.nodes)), columns=['name'])\n",
+    "edges_c = pd.DataFrame(np.array(list(C.edges)), columns=['source', 'target'])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run the script in 0.0025 mins\n"
+     ]
+    }
+   ],
+   "source": [
+    "tic = time.perf_counter()\n",
+    "node_categories_c = node_cat_dict(nodes_c)\n",
+    "toc = time.perf_counter()\n",
+    "print(f\"Run the script in {toc - tic:0.4f} secs\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "dict_keys(['note_group', 'pitch', 'program', 'MIDI', 'duration', 'velocity', 'time_sig', 'tempo'])"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node_categories_c.keys()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run the script in 19.69 mins\n"
+     ]
+    }
+   ],
+   "source": [
+    "tic = time.perf_counter()\n",
+    "nodes_cf, edges_cf = add_types(nodes_c, edges_c, node_categories_c)\n",
+    "toc = time.perf_counter()\n",
+    "print(f\"Run the script in {(toc-tic)/60:0.2f} mins\")\n",
+    "winsound.Beep(400, 700)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "outputs": [],
+   "source": [
+    "nodes_cf.to_csv('nodes_complete.csv')\n",
+    "edges_cf.to_csv('edges_complete.csv')"
    ],
    "metadata": {
     "collapsed": false
